Added update event endpoint
